2006-03-12 Ales Hvezda   <ahvezda@geda.seul.org>

	* lib/system-gnetlistrc.in: Removed load for the system-gafrc file,
	since it is loaded by libgeda first.

2006-03-10 Stuart Brorson <sdb [AT] cloud9 [DOT] net>
	* scheme/gnet-spice-sdb.scm: Added "m" attribute to PMOS and NMOS
	transistors per request of Peter Kaiser. 
	
2006-03-06 Carlos Nieves Onega <cnieves@iespana.es>

        * src/g_netlist.c: Return 'pwr' when getting pintype of a hidden
	pin. Thanks to Holger Oehm for providing the patch.
	
2006-03-03 Stuart Brorson <sdb [AT] cloud9 [DOT] net>
	* configure.ac, parsecmd.c: introduced getopt_long to enable
	parsing of long command line flags.  Had to change configure.ac
	to support looking for getopt.h instead of unistd.h.
	
2006-03-02 Carlos Nieves Onega <cnieves@iespana.es>

	* scheme/gnet-drc2.scm: Don't check pintypes of net "NoConnection".
	Thanks to Holger Oehm for reporting the bug and providing a patch.     
	
2006-02-28 Carlos Nieves Onega <cnieves@iespana.es>

	* scheme/gnet-drc2.scm: Added netname in the output message 
	when checking pintype connections. 
	Thanks to Holger Oehm for providing the patch. 
	
2006-02-05 Werner Hoch	<werner.ho@gmx.de>
	* scheme/gnet-spice.scm: cccs, ccvs, vccs and vcvs replacement uses
	a dash "-" in the name of vsens replacement, ngspice doesn't like that

2006-01-22 Ales Hvezda   <ahvezda@geda.seul.org>

	* autogen.sh, m4/guile.m4, src/Makefile.am: Removed m4 files since 
	they are installation specifc.  Also, all required libraries should be
	coming from LIBGEDA_LDFLAGS.

	* tests/*: Updated some of the spice regression tests to have the
	correct spice-sdb version

2006-01-16 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped package version to 20060123

        * README: Updated for the new year and release.

2006-01-15 Carlos Nieves Onega <cnieves@iespana.es>
	* scheme/gnet-drc2.scm: Changed error message to be more 
	self-explaining.
	
2006-01-07 Carlos Nieves Onega <cnieves@iespana.es>